tests/NormalTests/paczka1/fuzzy1/88986458.err
Error in line 1: KhVp S794 43,5
Error in line 9: SBxwQX1whKV A154 -1,7
Error in line 4: SBxwQX1whKV A154 29,8
Error in line 14: SBxwQX1whKV A242 48,9
Error in line 15: KhVp A242 7,5
Error in line 21: awRx1QCl1 A154 87,2
Error in line 36: SBxwQX1whKV AE14 1E9,5
Error in line 19: KhVp A154 30,9
